src/components/tab/style.scss
.tabComponent {
    display: block;
    align-items: center;
    color: #f8f8f2;
    background-color: #191A21;
}
.path {
    padding: 0px 10px 6px;
    color: #6272A4;
    background: #44475A70;
    -webkit-box-shadow: 0 8px 6px -6px black;
	   -moz-box-shadow: 0 8px 6px -6px black;
            box-shadow: 0 8px 6px -6px black, -8px 5px 6px -6px black, 8px 5px 6px -6px black;
    display: flex;
}
.path_text{
    margin-right: 8px;
    &:hover{
        color: #f8f8f2;
        cursor: pointer;
    }
}
.xBttn {
   // margin: auto 0px auto 15px;
    color: #f8f8f2;
    &.shadow {
        visibility: hidden;
        color: #6272A4;
    }
}
.tab{
    background-color: transparent;
    color: #f8f8f2;
    border: none;
    outline: none;
    font-size: 15px;
    font-family: Consolas, 'Courier New', monospace;
    cursor: pointer;

    width: fit-content;
    background: #44475A70;
    border-top: 1px solid #BD93F9;
    display: flex;
    border-right: 1px solid #191A21;
    &.shadow {
        background-color: #21222C;
        color: #6272A4;
        border-top: 1px solid transparent;

    }
    &:hover .xBttn{
        visibility: visible;
    }
}
.tabLabel{
    margin: auto;
}
.tabBar{
    //height: 41px;
    display: flex;
    overflow: auto;
    overflow-y: hidden;

    &::-webkit-scrollbar {
        height: 6px;
    }
    &::-webkit-scrollbar-track {
        background: #2c2e3b;
    }
    &::-webkit-scrollbar-thumb {
        background: transparent;
    }
    &::-webkit-scrollbar-thumb:hover {
        background: #424450;
    }
}
.tabBttn{
    background-color: transparent;
    color: #f8f8f2;
    border: none;
    outline: none;
    font-size: 15px;
    font-family: Consolas, 'Courier New', monospace;
    cursor: pointer;
}
.link{
    color:#f8f8f2;
    text-decoration: none;
    padding: 10px 10px;
}
.linkX{
    display: flex;
    margin: auto 5px auto 0px;
    &.dis{
        pointer-events: none;
    }
}

  

